test(user): adiciona testes unitários da entidade user

--- a/back/mss_user/package.json
+++ b/back/mss_user/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +18,11 @@
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.3.0",
+    "eslint": "^9.3.0",
+    "globals": "^15.3.0",
+    "vitest": "^1.6.0"
   }
 }
