--- a/front/minhaestante/.env.example
+++ b/front/minhaestante/.env.example
@@ -1,2 +1,2 @@
-REACT_APP_URL_MssUser=http://localhost:4000
-REACT_APP_URL_MssBook=http://localhost:3000
+REACT_APP_URL_MssUser=http://localhost:PORT
+REACT_APP_URL_MssBook=http://localhost:PORT
