--- a/back/mss_user/package.json
+++ b/back/mss_user/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -22,7 +23,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.3.0",
-    "eslint": "^9.3.0",
     "globals": "^15.3.0",
     "nodemon": "^3.1.4",
     "vitest": "^1.6.0"
