--- a/.github/workflows/cd_front.yml
+++ b/.github/workflows/cd_front.yml
@@ -6,7 +6,7 @@ on:
       - feat-deploy-front
     paths:
       - front/minhaestante/**
-      - github/*
+      - .github/*
 
   workflow_dispatch:
 
