--- a/.github/workflows/cd_front.yml
+++ b/.github/workflows/cd_front.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Installing Dependencies
         run: |
-          cd front/iac
+          cd front/minhaestante/iac
           npm install
           npm install -g aws-cdk
 
