--- a/back/barramento/.dockerignore
+++ b/back/barramento/.dockerignore
@@ -4,6 +4,7 @@
 # For more help, visit the .dockerignore file reference guide at
 # https://docs.docker.com/engine/reference/builder/#dockerignore-file
 
+**/.env
 **/.DS_Store
 **/__pycache__
 **/.venv
