--- a/back/mss_book/package.json
+++ b/back/mss_book/package.json
@@ -1,12 +1,12 @@
 {
   "name": "mss_book",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "vitest"
+    "test": "vitest",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +20,10 @@
     "eslint": "^9.4.0",
     "nodemon": "^3.1.2",
     "vitest": "^1.6.0"
-  }
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "keywords": [],
+  "description": ""
 }
