--- a/back/mss_user/package.json
+++ b/back/mss_user/package.json
@@ -1,7 +1,6 @@
 {
   "name": "mss_user",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "directories": {
@@ -9,7 +8,8 @@
   },
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "vitest"
+    "test": "vitest",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -26,5 +26,6 @@
     "globals": "^15.3.0",
     "nodemon": "^3.1.4",
     "vitest": "^1.6.0"
-  }
+  },
+  "description": ""
 }
