docs: update json

--- a/back/barramento/package.json
+++ b/back/barramento/package.json
@@ -1,7 +1,6 @@
 {
   "name": "barramento",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -20,5 +19,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
-  }
+  },
+  "description": ""
 }
